--- a/crypto/watch.html
+++ b/crypto/watch.html
@@ -20,6 +20,10 @@
 
     <script src="https://widgets.coingecko.com/coingecko-coin-list-widget.js"></script>
     <style>
+        img {
+            vertical-align: middle;
+        }
+
         .small-text {
             font-size: small;
             overflow-wrap: break-word
@@ -58,6 +62,10 @@
             vertical-align: top;
         }
 
+        .img-refresh-ctl {
+            width: 20px;
+        }
+
         .toggle-radio {
             padding: 6px;
         }
@@ -78,13 +86,6 @@
             loadSetting();
 
             // event listeners
-            var listStyleOptions = document.querySelectorAll("input[type='radio'][name='liststyle']");
-            listStyleOptions.forEach((o) => {
-                console.log("option - value:", o.value)
-                if (listtype == o.value) o.checked = true;
-                o.addEventListener("click", (e) => { liststyle = e.target.value; toggle() })
-            })
-
             document.getElementById("togglegrp").querySelectorAll("button").forEach((btn) => {
                 if (btn.dataset.listtype == listtype) {
                     btn.className = "button active-button";
@@ -92,10 +93,10 @@
                 btn.addEventListener("click", (e) => { listtype = btn.dataset.listtype; toggle(); });
             });
 
-
             document.getElementById("filter").addEventListener("change", (e) => { filter = e.target.value; changeFilter() });
             document.getElementById("reloadbutton").addEventListener("click", () => refreshData());
-            document.getElementById("autorefresh").addEventListener("change", (e) => { refreshinterval = e.target.value; setupAutoRefresh() });
+            document.getElementById("autorefresh").addEventListener("change", (e) => updateRefreshInterval(e.target.value));
+            document.getElementById("refreshctl").addEventListener("click", (e) => controlRefresh());
 
             // initialization
             init();
@@ -166,26 +167,58 @@
         function refreshData() {
             console.log("..... refresh data .....");
             loadList();
-            setupAutoRefresh();
         }
 
+        function updateRefreshInterval(value) {
+            console.log("[updateRefreshInterval] new value:", value);
+            refreshinterval = value;
+            localStorage.setItem("refreshinterval", refreshinterval);
+            var ctl = document.getElementById("refreshctl");
+            var ctlState = ctl.dataset.state;
+            if (ctlState == "run") {
+                console.log("[updateRefreshInterval] re-set-up the auto refresh");
+                setupAutoRefresh();
+            }
+        }
 
         function setupAutoRefresh() {
-            if (refreshTimer) {
-                console.log("[setupAutoRefresh] clear the current refresh timer");
-                clearTimeout(refreshTimer);
-            }
+            console.log("[setupAutoRefresh] clear the current refresh timer");
+            clearTimeout(refreshTimer);
+
             console.log("setupAutoRefresh");
-            localStorage.setItem("refreshinterval", refreshinterval);
 
             (function countdown(remaining) {
                 if (remaining <= 0) {
                     refreshData();
+                    setupAutoRefresh();
                 } else {
                     document.getElementById('countdown').innerHTML = remaining;
                     refreshTimer = setTimeout(function () { countdown(remaining - 1); }, 1000);
                 }
             })(refreshinterval);
+        }
+
+        function controlRefresh() {
+            var ctl = document.getElementById("refreshctl");
+            var ctlImg = document.getElementById("refreshctlimg");
+            var countdownDisplay = document.getElementById("countdowndisplay");
+
+            var ctlState = ctl.dataset.state;
+
+            console.log("... controlRefresh ... currentState:", ctlState)
+
+            if (ctlState == "run") {
+                ctl.dataset.state = "stop";
+                ctlImg.src = "image/play.svg";
+                countdownDisplay.style.display = "none";
+                clearTimeout(refreshTimer);
+            }
+            else {
+                ctl.dataset.state = "run";
+                ctlImg.src = "image/pause.svg";
+                countdownDisplay.style.display = "inline";
+                setupAutoRefresh();
+            }
         }
 
         function changeFilter() {
@@ -317,20 +350,23 @@
             <div class="col-sm-12 col-md-6">
                 <div style="float: right;">
                     <label for="autorefresh">Refresh (s)</label>
-                    <input id="autorefresh" type="number" min="10" max="60">
-                    <button id="reloadbutton" style="width: 140px;"><img width="15" style="vertical-align: middle;"
-                            src="https://img.icons8.com/external-kmg-design-glyph-kmg-design/32/000000/external-refresh-arrow-kmg-design-glyph-kmg-design.png" />
-                        Reload (<span id="countdown"></span>)
+                    <input id="autorefresh" type="number" min="10" max="60" class="small">
+                    <button id="refreshctl" style="width: 90px;" data-state="run">
+                        <img id="refreshctlimg" class="img-refresh-ctl" src="image/pause.svg">
+                        <span id="countdowndisplay">(<span id="countdown"></span>)</span>
+                    </button>
+                    <button id="reloadbutton"><img width="15" style="vertical-align: middle;" src="image/reload.svg" />
+                        Reload
                     </button>
                 </div>
             </div>
         </div>
     </div>
 
-
     <div class="container">
         <div class="row" id="container"></div>
     </div>
+
 </body>
 
 </html>
