--- a/home-office/index.html
+++ b/home-office/index.html
@@ -1,9 +1,13 @@
 <html>
   <head>
     <title>Home Office</title>
+    <link href='https://fonts.googleapis.com/css?family=Open Sans' rel='stylesheet'>
     <style>
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
-</style>
+body {
+  font-family: 'Open Sans', serif;
+  font-size: 22px;
+}
+    </style>
   </head>
   <body>
     <h1>Home Office</h1>
