--- a/info/uobgold/acb_trending_report.html
+++ b/info/uobgold/acb_trending_report.html
@@ -77,8 +77,8 @@
     <div class="container">
         <div class="header">
             <h1>ACB (ARGOR CAST BAR) Price Trending Report</h1>
-            <p>Unit: 100 GM | Data Points: 347 | Period: Last 30 Days</p>
-            <p>Last update time: <strong>2025-09-05 22:49</strong></p>
+            <p>Latest Sell Price: SGD <strong>14,965.00</strong> (7.80%) </p>
+            <p>Unit: 100 GM | Data Points: 347 | Period: Last 30 Days | Update Time: <strong>2025-09-05 22:49</strong></p>
         </div>
         
         <div class="chart-container">
@@ -166,12 +166,12 @@
                             },
                             label1: {
                                 type: 'label',
-                                xValue: 5,
+                                xValue: 100,
                                 yValue: 13882,
                                 borderRadius: 5,
                                 backgroundColor: 'rgb(3, 57, 252)',
                                 color: 'rgb(255, 255, 255)',
-                                content: ['S$ 13,882'],
+                                content: ['SGD 13,882.00'],
                                 font: {
                                     size: 14
                                 }
